fix padding on photo page on mobile
Former-commit-id: 926f633975f021963480137f2778b05b8abe6ad3

--- a/app/scripts/views/App/views/Portfolio/Galleries/styles.scss
+++ b/app/scripts/views/App/views/Portfolio/Galleries/styles.scss
@@ -77,6 +77,10 @@ ul {
 }
 
 .copy {
-  padding-right: $grid-gutter-width-base / 2;
+  padding: 0 $grid-gutter-width-base / 2;
   max-width: 50rem;
+
+  @include media-breakpoint-up(sm) {
+    padding-left: 0;
+  }
 }
